k8s/gatus/resources/gatus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      serviceAccountName: service-account
      containers:
        - image: ghcr.io/twin/gatus:v5.13.1@sha256:24842a8adebd3dd4bd04a4038ffa27cb2fe72bb50631415e0fb2915063fc1993
          name: gatus
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              memory: 100M
            limits:
              memory: 500M
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: data-volume
              mountPath: /data
            - name: config
              mountPath: /config
            - name: config-map
              mountPath: /config/gatus.yml
              subPath: gatus.yml
              readOnly: true
        - image: ghcr.io/kiwigrid/k8s-sidecar:1.28.4@sha256:20caf4e241e1f9f9231527db5e75b735aa7b0da7bee3d262cbe369bb9b33469f
          name: config-sync
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
        - name: config-map
          configMap:
            name: gatus-config
        - name: config
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
